Support blocked-worlds and nether tree
Bump version to 1.1.3 and add nether tree and blocked-worlds support.

Key changes:
- build.gradle: version -> 1.1.3
- config.yml: added discord link and example blocked-worlds entry; set defaults for several config keys
- Settings: introduce blockedWorlds list, isWorldBlocked(), and safer getInt/getBoolean defaults
- TreeCutListener: skip tree-capitator in blocked worlds
- BlockUtils: add isNetherLeaves() and include nether leaves in natural-tree detection
- LeafDecayService: fix persistent-leaves check and include nether leaves in decay scan
- AnvilListener: bail out if EnchantUtils.applyEnchant(...) fails
- GriefPreventionUtils: adopt Claim.checkPermission API (ClaimPermission + Supplier) instead of allowBreak
- ProtectionUtils: remove explanatory comments and streamline protection checks
- TreeCutService: minor cleanup (removed comments), behavior unchanged
- UpdateChecker: construct URL via URI.toURL() and remove unused import

Overall this adds per-world disabling and improves support for nether block types and updated GP API usage.